[gd_scene load_steps=12 format=4 uid="uid://0f23xbuqayao"]

[ext_resource type="Script" uid="uid://d06n3a1s7drxd" path="res://script/panda's_minigame_selection.gd" id="1_b3ncy"]
[ext_resource type="Texture2D" uid="uid://c41jkf66ip1it" path="res://assets/sprites/ground.png" id="2_1rygp"]
[ext_resource type="Script" uid="uid://3inedt7vwkw7" path="res://script/camera_2d.gd" id="3_hvm6n"]
[ext_resource type="Texture2D" uid="uid://dbmcdjeflen0y" path="res://assets/sprites/Black cat display.png" id="4_jrpb8"]
[ext_resource type="Texture2D" uid="uid://crob2q62nl1f0" path="res://assets/sprites/sprites/BUTTONS/ParkRun.png" id="5_1peoh"]
[ext_resource type="Texture2D" uid="uid://csuq24aki6lxp" path="res://assets/sprites/sprites/BUTTONS/ParkRunHover.png" id="6_nh1i7"]
[ext_resource type="PackedScene" uid="uid://b83hwoltxpxrq" path="res://scenes/fade_transition.tscn" id="7_htvqq"]
[ext_resource type="Texture2D" uid="uid://dl8fs7d20bvl" path="res://assets/sprites/sprites/BUTTONS/Go_Back.png" id="7_hvm6n"]
[ext_resource type="Texture2D" uid="uid://boqv7aiafy7od" path="res://assets/sprites/sprites/BUTTONS/Go_Back_hover.png" id="8_jrpb8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xfx8o"]
texture = ExtResource("2_1rygp")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0

[sub_resource type="TileSet" id="TileSet_h7cif"]
sources/0 = SubResource("TileSetAtlasSource_xfx8o")

[node name="Panda\'s minigame selection" type="Node2D"]
script = ExtResource("1_b3ncy")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD7////AAAFAAEAAAD8////AAAFAAEAAAD9////AAAFAAEAAAD+////AAAFAAEAAAD/////AAAFAAEAAAAAAP//AAAFAAEAAAABAP//AAAFAAEAAAACAP//AAAFAAEAAAADAP//AAAFAAEAAAAEAP//AAAFAAEAAAD3//3/AAAFAAAAAAD4//3/AAAFAAAAAAD5//3/AAAFAAAAAAD6//3/AAAFAAAAAAD7//3/AAAFAAAAAAD8//3/AAAFAAAAAAD9//3/AAAFAAAAAAD+//3/AAAFAAAAAAD///3/AAAFAAAAAAAAAP3/AAAFAAAAAAABAP3/AAAFAAAAAAACAP3/AAAFAAAAAAADAP3/AAAFAAAAAAAEAP3/AAAFAAAAAAAFAP3/AAAFAAAAAAAGAP3/AAAFAAAAAAAHAP3/AAAFAAAAAAAIAP3/AAAFAAAAAAD1//f/AAAEAAAAAAD1//j/AAAEAAAAAAD1//n/AAAEAAAAAAD1//r/AAAEAAAAAAD1//v/AAAEAAAAAAD1//z/AAAEAAAAAAD2//f/AAAEAAAAAAD2//j/AAAEAAAAAAD2//n/AAAEAAAAAAD2//r/AAAEAAAAAAD2//v/AAAEAAAAAAD2//z/AAAEAAAAAAD3//f/AAAEAAAAAAD3//j/AAAEAAAAAAD3//n/AAAEAAAAAAD3//r/AAAEAAAAAAD3//v/AAAEAAAAAAD3//z/AAAEAAAAAAD4//f/AAAEAAAAAAD4//j/AAAEAAAAAAD4//n/AAAEAAAAAAD4//r/AAAEAAAAAAD4//v/AAAEAAAAAAD4//z/AAAEAAAAAAD5//f/AAAEAAAAAAD5//j/AAAEAAAAAAD5//n/AAAEAAAAAAD5//r/AAAEAAAAAAD5//v/AAAEAAAAAAD5//z/AAAEAAAAAAD6//f/AAAEAAAAAAD6//j/AAAEAAAAAAD6//n/AAAEAAAAAAD6//r/AAAEAAAAAAD6//v/AAAEAAAAAAD6//z/AAAEAAAAAAD7//f/AAAEAAAAAAD7//j/AAAEAAAAAAD7//n/AAAEAAAAAAD7//r/AAAEAAAAAAD7//v/AAAEAAAAAAD7//z/AAAEAAAAAAD8//f/AAAEAAAAAAD8//j/AAAEAAAAAAD8//n/AAAEAAAAAAD8//r/AAAEAAAAAAD8//v/AAAEAAAAAAD8//z/AAAEAAAAAAD9//f/AAAEAAAAAAD9//j/AAAEAAAAAAD9//n/AAAEAAAAAAD9//r/AAAEAAAAAAD9//v/AAAEAAAAAAD9//z/AAAEAAAAAAD+//f/AAAEAAAAAAD+//j/AAAEAAAAAAD+//n/AAAEAAAAAAD+//r/AAAEAAAAAAD+//v/AAAEAAAAAAD+//z/AAAEAAAAAAD///f/AAAEAAAAAAD///j/AAAEAAAAAAD///n/AAAEAAAAAAD///r/AAAEAAAAAAD///v/AAAEAAAAAAD///z/AAAEAAAAAAAAAPf/AAAEAAAAAAAAAPj/AAAEAAAAAAAAAPn/AAAEAAAAAAAAAPr/AAAEAAAAAAAAAPv/AAAEAAAAAAAAAPz/AAAEAAAAAAABAPf/AAAEAAAAAAABAPj/AAAEAAAAAAABAPn/AAAEAAAAAAABAPr/AAAEAAAAAAABAPv/AAAEAAAAAAABAPz/AAAEAAAAAAACAPf/AAAEAAAAAAACAPj/AAAEAAAAAAACAPn/AAAEAAAAAAACAPr/AAAEAAAAAAACAPv/AAAEAAAAAAACAPz/AAAEAAAAAAADAPf/AAAEAAAAAAADAPj/AAAEAAAAAAADAPn/AAAEAAAAAAADAPr/AAAEAAAAAAADAPv/AAAEAAAAAAADAPz/AAAEAAAAAAAEAPf/AAAEAAAAAAAEAPj/AAAEAAAAAAAEAPn/AAAEAAAAAAAEAPr/AAAEAAAAAAAEAPv/AAAEAAAAAAAEAPz/AAAEAAAAAAAFAPf/AAAEAAAAAAAFAPj/AAAEAAAAAAAFAPn/AAAEAAAAAAAFAPr/AAAEAAAAAAAFAPv/AAAEAAAAAAAFAPz/AAAEAAAAAAAGAPf/AAAEAAAAAAAGAPj/AAAEAAAAAAAGAPn/AAAEAAAAAAAGAPr/AAAEAAAAAAAGAPv/AAAEAAAAAAAGAPz/AAAEAAAAAAAHAPf/AAAEAAAAAAAHAPj/AAAEAAAAAAAHAPn/AAAEAAAAAAAHAPr/AAAEAAAAAAAHAPv/AAAEAAAAAAAHAPz/AAAEAAAAAAAIAPf/AAAEAAAAAAAIAPj/AAAEAAAAAAAIAPn/AAAEAAAAAAAIAPr/AAAEAAAAAAAIAPv/AAAEAAAAAAAIAPz/AAAEAAAAAAAJAPf/AAAEAAAAAAAJAPj/AAAEAAAAAAAJAPn/AAAEAAAAAAAJAPr/AAAEAAAAAAAJAPv/AAAEAAAAAAAJAPz/AAAEAAAAAADx//3/AAAFAAAAAADy//3/AAAFAAAAAADz//3/AAAFAAAAAAD0//3/AAAFAAAAAAD1//3/AAAFAAAAAAD2//3/AAAFAAAAAAAJAP3/AAAFAAAAAAAKAP3/AAAFAAAAAAALAP3/AAAFAAAAAAAMAP3/AAAFAAAAAAANAP3/AAAFAAAAAAAOAP3/AAAFAAAAAAAPAP3/AAAFAAAAAADx//f/AAAEAAAAAADx//j/AAAEAAAAAADx//n/AAAEAAAAAADx//r/AAAEAAAAAADx//v/AAAEAAAAAADx//z/AAAEAAAAAADy//f/AAAEAAAAAADy//j/AAAEAAAAAADy//n/AAAEAAAAAADy//r/AAAEAAAAAADy//v/AAAEAAAAAADy//z/AAAEAAAAAADz//f/AAAEAAAAAADz//j/AAAEAAAAAADz//n/AAAEAAAAAADz//r/AAAEAAAAAADz//v/AAAEAAAAAADz//z/AAAEAAAAAAD0//f/AAAEAAAAAAD0//j/AAAEAAAAAAD0//n/AAAEAAAAAAD0//r/AAAEAAAAAAD0//v/AAAEAAAAAAD0//z/AAAEAAAAAAAKAPf/AAAEAAAAAAAKAPj/AAAEAAAAAAAKAPn/AAAEAAAAAAAKAPr/AAAEAAAAAAAKAPv/AAAEAAAAAAAKAPz/AAAEAAAAAAALAPf/AAAEAAAAAAALAPj/AAAEAAAAAAALAPn/AAAEAAAAAAALAPr/AAAEAAAAAAALAPv/AAAEAAAAAAALAPz/AAAEAAAAAAAMAPf/AAAEAAAAAAAMAPj/AAAEAAAAAAAMAPn/AAAEAAAAAAAMAPr/AAAEAAAAAAAMAPv/AAAEAAAAAAAMAPz/AAAEAAAAAAANAPf/AAAEAAAAAAANAPj/AAAEAAAAAAANAPn/AAAEAAAAAAANAPr/AAAEAAAAAAANAPv/AAAEAAAAAAANAPz/AAAEAAAAAAAOAPf/AAAEAAAAAAAOAPj/AAAEAAAAAAAOAPn/AAAEAAAAAAAOAPr/AAAEAAAAAAAOAPv/AAAEAAAAAAAOAPz/AAAEAAAAAAAPAPf/AAAEAAAAAAAPAPj/AAAEAAAAAAAPAPn/AAAEAAAAAAAPAPr/AAAEAAAAAAAPAPv/AAAEAAAAAAAPAPz/AAAEAAAAAADx//7/AAAFAAEAAADx////AAAFAAEAAADx/wAAAAAFAAEAAADx/wEAAAAFAAEAAADy//7/AAAFAAEAAADy////AAAFAAEAAADy/wAAAAAFAAEAAADy/wEAAAAFAAEAAADz//7/AAAFAAEAAADz////AAAFAAEAAADz/wAAAAAFAAEAAADz/wEAAAAFAAEAAAD0//7/AAAFAAEAAAD0////AAAFAAEAAAD0/wAAAAAFAAEAAAD0/wEAAAAFAAEAAAD1//7/AAAFAAEAAAD1////AAAFAAEAAAD1/wAAAAAFAAEAAAD1/wEAAAAFAAEAAAD2//7/AAAFAAEAAAD2////AAAFAAEAAAD2/wAAAAAFAAEAAAD2/wEAAAAFAAEAAAD3//7/AAAFAAEAAAD3////AAAFAAEAAAD3/wAAAAAFAAEAAAD3/wEAAAAFAAEAAAD4//7/AAAFAAEAAAD4////AAAFAAEAAAD4/wAAAAAFAAEAAAD4/wEAAAAFAAEAAAD5//7/AAAFAAEAAAD5////AAAFAAEAAAD5/wAAAAAFAAEAAAD5/wEAAAAFAAEAAAD6//7/AAAFAAEAAAD6////AAAFAAEAAAD6/wAAAAAFAAEAAAD6/wEAAAAFAAEAAAD7//7/AAAFAAEAAAD7/wAAAAAFAAEAAAD7/wEAAAAFAAEAAAD8//7/AAAFAAEAAAD8/wAAAAAFAAEAAAD8/wEAAAAFAAEAAAD9//7/AAAFAAEAAAD9/wAAAAAFAAEAAAD9/wEAAAAFAAEAAAD+//7/AAAFAAEAAAD+/wAAAAAFAAEAAAD+/wEAAAAFAAEAAAD///7/AAAFAAEAAAD//wAAAAAFAAEAAAD//wEAAAAFAAEAAAAAAP7/AAAFAAEAAAAAAAAAAAAFAAEAAAAAAAEAAAAFAAEAAAABAP7/AAAFAAEAAAABAAAAAAAFAAEAAAABAAEAAAAFAAEAAAACAP7/AAAFAAEAAAACAAAAAAAFAAEAAAACAAEAAAAFAAEAAAADAP7/AAAFAAEAAAADAAAAAAAFAAEAAAADAAEAAAAFAAEAAAAEAP7/AAAFAAEAAAAEAAAAAAAFAAEAAAAEAAEAAAAFAAEAAAAFAP7/AAAFAAEAAAAFAP//AAAFAAEAAAAFAAAAAAAFAAEAAAAFAAEAAAAFAAEAAAAGAP7/AAAFAAEAAAAGAP//AAAFAAEAAAAGAAAAAAAFAAEAAAAGAAEAAAAFAAEAAAAHAP7/AAAFAAEAAAAHAP//AAAFAAEAAAAHAAAAAAAFAAEAAAAHAAEAAAAFAAEAAAAIAP7/AAAFAAEAAAAIAP//AAAFAAEAAAAIAAAAAAAFAAEAAAAIAAEAAAAFAAEAAAAJAP7/AAAFAAEAAAAJAP//AAAFAAEAAAAJAAAAAAAFAAEAAAAJAAEAAAAFAAEAAAAKAP7/AAAFAAEAAAAKAP//AAAFAAEAAAAKAAAAAAAFAAEAAAAKAAEAAAAFAAEAAAALAP7/AAAFAAEAAAALAP//AAAFAAEAAAALAAAAAAAFAAEAAAALAAEAAAAFAAEAAAAMAP7/AAAFAAEAAAAMAP//AAAFAAEAAAAMAAAAAAAFAAEAAAAMAAEAAAAFAAEAAAANAP7/AAAFAAEAAAANAP//AAAFAAEAAAANAAAAAAAFAAEAAAANAAEAAAAFAAEAAAAOAP7/AAAFAAEAAAAOAP//AAAFAAEAAAAOAAAAAAAFAAEAAAAOAAEAAAAFAAEAAAAPAP7/AAAFAAEAAAAPAP//AAAFAAEAAAAPAAAAAAAFAAEAAAAPAAEAAAAFAAEAAADx/wIAAAAFAAIAAADy/wIAAAAFAAIAAADz/wIAAAAFAAIAAAD0/wIAAAAFAAIAAAD1/wIAAAAFAAIAAAD2/wIAAAAFAAIAAAD3/wIAAAAFAAIAAAD4/wIAAAAFAAIAAAD5/wIAAAAFAAIAAAD6/wIAAAAFAAIAAAD7/wIAAAAFAAIAAAD8/wIAAAAFAAIAAAD9/wIAAAAFAAIAAAD+/wIAAAAFAAIAAAD//wIAAAAFAAIAAAAAAAIAAAAFAAIAAAABAAIAAAAFAAIAAAACAAIAAAAFAAIAAAADAAIAAAAFAAIAAAAEAAIAAAAFAAIAAAAFAAIAAAAFAAIAAAAGAAIAAAAFAAIAAAAHAAIAAAAFAAIAAAAIAAIAAAAFAAIAAAAJAAIAAAAFAAIAAAAKAAIAAAAFAAIAAAALAAIAAAAFAAIAAAAMAAIAAAAFAAIAAAANAAIAAAAFAAIAAAAOAAIAAAAFAAIAAAAPAAIAAAAFAAIAAADx/wMAAAAFAAMAAADx/wQAAAAFAAMAAADx/wUAAAAFAAMAAADx/wYAAAAFAAMAAADx/wcAAAAFAAMAAADx/wgAAAAFAAMAAADx/wkAAAAFAAMAAADy/wMAAAAFAAMAAADy/wQAAAAFAAMAAADy/wUAAAAFAAMAAADy/wYAAAAFAAMAAADy/wcAAAAFAAMAAADy/wgAAAAFAAMAAADy/wkAAAAFAAMAAADz/wMAAAAFAAMAAADz/wQAAAAFAAMAAADz/wUAAAAFAAMAAADz/wYAAAAFAAMAAADz/wcAAAAFAAMAAADz/wgAAAAFAAMAAADz/wkAAAAFAAMAAAD0/wMAAAAFAAMAAAD0/wQAAAAFAAMAAAD0/wUAAAAFAAMAAAD0/wYAAAAFAAMAAAD0/wcAAAAFAAMAAAD0/wgAAAAFAAMAAAD0/wkAAAAFAAMAAAD1/wMAAAAFAAMAAAD1/wQAAAAFAAMAAAD1/wUAAAAFAAMAAAD1/wYAAAAFAAMAAAD1/wcAAAAFAAMAAAD1/wgAAAAFAAMAAAD1/wkAAAAFAAMAAAD2/wMAAAAFAAMAAAD2/wQAAAAFAAMAAAD2/wUAAAAFAAMAAAD2/wYAAAAFAAMAAAD2/wcAAAAFAAMAAAD2/wgAAAAFAAMAAAD2/wkAAAAFAAMAAAD3/wMAAAAFAAMAAAD3/wQAAAAFAAMAAAD3/wUAAAAFAAMAAAD3/wYAAAAFAAMAAAD3/wcAAAAFAAMAAAD3/wgAAAAFAAMAAAD3/wkAAAAFAAMAAAD4/wMAAAAFAAMAAAD4/wQAAAAFAAMAAAD4/wUAAAAFAAMAAAD4/wYAAAAFAAMAAAD4/wcAAAAFAAMAAAD4/wgAAAAFAAMAAAD4/wkAAAAFAAMAAAD5/wMAAAAFAAMAAAD5/wQAAAAFAAMAAAD5/wUAAAAFAAMAAAD5/wYAAAAFAAMAAAD5/wcAAAAFAAMAAAD5/wgAAAAFAAMAAAD5/wkAAAAFAAMAAAD6/wMAAAAFAAMAAAD6/wQAAAAFAAMAAAD6/wUAAAAFAAMAAAD6/wYAAAAFAAMAAAD6/wcAAAAFAAMAAAD6/wgAAAAFAAMAAAD6/wkAAAAFAAMAAAD7/wMAAAAFAAMAAAD7/wQAAAAFAAMAAAD7/wUAAAAFAAMAAAD7/wYAAAAFAAMAAAD7/wcAAAAFAAMAAAD7/wgAAAAFAAMAAAD7/wkAAAAFAAMAAAD8/wMAAAAFAAMAAAD8/wQAAAAFAAMAAAD8/wUAAAAFAAMAAAD8/wYAAAAFAAMAAAD8/wcAAAAFAAMAAAD8/wgAAAAFAAMAAAD8/wkAAAAFAAMAAAD9/wMAAAAFAAMAAAD9/wQAAAAFAAMAAAD9/wUAAAAFAAMAAAD9/wYAAAAFAAMAAAD9/wcAAAAFAAMAAAD9/wgAAAAFAAMAAAD9/wkAAAAFAAMAAAD+/wMAAAAFAAMAAAD+/wQAAAAFAAMAAAD+/wUAAAAFAAMAAAD+/wYAAAAFAAMAAAD+/wcAAAAFAAMAAAD+/wgAAAAFAAMAAAD+/wkAAAAFAAMAAAD//wMAAAAFAAMAAAD//wQAAAAFAAMAAAD//wUAAAAFAAMAAAD//wYAAAAFAAMAAAD//wcAAAAFAAMAAAD//wgAAAAFAAMAAAD//wkAAAAFAAMAAAAAAAMAAAAFAAMAAAAAAAQAAAAFAAMAAAAAAAUAAAAFAAMAAAAAAAYAAAAFAAMAAAAAAAcAAAAFAAMAAAAAAAgAAAAFAAMAAAAAAAkAAAAFAAMAAAABAAMAAAAFAAMAAAABAAQAAAAFAAMAAAABAAUAAAAFAAMAAAABAAYAAAAFAAMAAAABAAcAAAAFAAMAAAABAAgAAAAFAAMAAAABAAkAAAAFAAMAAAACAAMAAAAFAAMAAAACAAQAAAAFAAMAAAACAAUAAAAFAAMAAAACAAYAAAAFAAMAAAACAAcAAAAFAAMAAAACAAgAAAAFAAMAAAACAAkAAAAFAAMAAAADAAMAAAAFAAMAAAADAAQAAAAFAAMAAAADAAUAAAAFAAMAAAADAAYAAAAFAAMAAAADAAcAAAAFAAMAAAADAAgAAAAFAAMAAAADAAkAAAAFAAMAAAAEAAMAAAAFAAMAAAAEAAQAAAAFAAMAAAAEAAUAAAAFAAMAAAAEAAYAAAAFAAMAAAAEAAcAAAAFAAMAAAAEAAgAAAAFAAMAAAAEAAkAAAAFAAMAAAAFAAMAAAAFAAMAAAAFAAQAAAAFAAMAAAAFAAUAAAAFAAMAAAAFAAYAAAAFAAMAAAAFAAcAAAAFAAMAAAAFAAgAAAAFAAMAAAAFAAkAAAAFAAMAAAAGAAMAAAAFAAMAAAAGAAQAAAAFAAMAAAAGAAUAAAAFAAMAAAAGAAYAAAAFAAMAAAAGAAcAAAAFAAMAAAAGAAgAAAAFAAMAAAAGAAkAAAAFAAMAAAAHAAMAAAAFAAMAAAAHAAQAAAAFAAMAAAAHAAUAAAAFAAMAAAAHAAYAAAAFAAMAAAAHAAcAAAAFAAMAAAAHAAgAAAAFAAMAAAAHAAkAAAAFAAMAAAAIAAMAAAAFAAMAAAAIAAQAAAAFAAMAAAAIAAUAAAAFAAMAAAAIAAYAAAAFAAMAAAAIAAcAAAAFAAMAAAAIAAgAAAAFAAMAAAAIAAkAAAAFAAMAAAAJAAMAAAAFAAMAAAAJAAQAAAAFAAMAAAAJAAUAAAAFAAMAAAAJAAYAAAAFAAMAAAAJAAcAAAAFAAMAAAAJAAgAAAAFAAMAAAAJAAkAAAAFAAMAAAAKAAMAAAAFAAMAAAAKAAQAAAAFAAMAAAAKAAUAAAAFAAMAAAAKAAYAAAAFAAMAAAAKAAcAAAAFAAMAAAAKAAgAAAAFAAMAAAAKAAkAAAAFAAMAAAALAAMAAAAFAAMAAAALAAQAAAAFAAMAAAALAAUAAAAFAAMAAAALAAYAAAAFAAMAAAALAAcAAAAFAAMAAAALAAgAAAAFAAMAAAALAAkAAAAFAAMAAAAMAAMAAAAFAAMAAAAMAAQAAAAFAAMAAAAMAAUAAAAFAAMAAAAMAAYAAAAFAAMAAAAMAAcAAAAFAAMAAAAMAAgAAAAFAAMAAAAMAAkAAAAFAAMAAAANAAMAAAAFAAMAAAANAAQAAAAFAAMAAAANAAUAAAAFAAMAAAANAAYAAAAFAAMAAAANAAcAAAAFAAMAAAANAAgAAAAFAAMAAAANAAkAAAAFAAMAAAAOAAMAAAAFAAMAAAAOAAQAAAAFAAMAAAAOAAUAAAAFAAMAAAAOAAYAAAAFAAMAAAAOAAcAAAAFAAMAAAAOAAgAAAAFAAMAAAAOAAkAAAAFAAMAAAAPAAMAAAAFAAMAAAAPAAQAAAAFAAMAAAAPAAUAAAAFAAMAAAAPAAYAAAAFAAMAAAAPAAcAAAAFAAMAAAAPAAgAAAAFAAMAAAAPAAkAAAAFAAMAAAA=")
tile_set = SubResource("TileSet_h7cif")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(9, 9)
limit_left = -77
limit_top = -44
limit_right = 77
limit_bottom = 44
position_smoothing_enabled = true
position_smoothing_speed = 0.5
script = ExtResource("3_hvm6n")

[node name="BlackCatDisplay" type="Sprite2D" parent="."]
position = Vector2(-25, 1)
texture = ExtResource("4_jrpb8")

[node name="Buttons" type="Node2D" parent="."]

[node name="Park Run" type="TextureButton" parent="Buttons"]
offset_left = 1.0
offset_top = -24.0
offset_right = 65.0
offset_bottom = -8.0
texture_normal = ExtResource("5_1peoh")
texture_hover = ExtResource("6_nh1i7")

[node name="GoBack" type="TextureButton" parent="Buttons"]
offset_left = 4.0
offset_top = 9.0
offset_right = 68.0
offset_bottom = 25.0
texture_normal = ExtResource("7_hvm6n")
texture_hover = ExtResource("8_jrpb8")

[node name="fade_transition" parent="." instance=ExtResource("7_htvqq")]
offset_left = -735.0
offset_top = -307.0
offset_right = 7249.0
offset_bottom = 4067.0

[node name="FadeTimer" type="Timer" parent="fade_transition"]
one_shot = true

[connection signal="pressed" from="Buttons/Park Run" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Buttons/GoBack" to="." method="_on_go_back_pressed"]
[connection signal="timeout" from="fade_transition/FadeTimer" to="." method="_on_fade_timer_timeout"]
